have window popping up, need to fix redirect and get access token.

--- a/public/index.html
+++ b/public/index.html
@@ -11,4 +11,8 @@
 
     <p>Shit Works Yo</p>
 </body>
+
+<!-- Javascript Link -->
+<script type="text/javascript" src="assets/javascript/app.js"></script>
+
 </html>
