added some notes. still need to parse out the access tokens.

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
     <div id="app"></div>
 
     <p>Shit Works Yo</p>
+    <button id="button">linkedin</button>
+    <button id="button2">control</button>
 </body>
 
-<!-- Javascript Link -->
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<!-- Javascript -->
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </html>
