updating css template

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <div id="app">
+  <!-- <div id="app"> -->
     <!-- built files will be auto injected -->
 
 
@@ -159,7 +159,7 @@
 
       </div>
 
-    </div>
+    <!-- </div> -->
 </body>
 
 </html>
