everything is working now. I just need to put it up on the front-end now.

--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
+  <!-- Linkedin Sign in -->
+  <script type="text/javascript" src="javascript/linkedinAPI.js"></script>
 </html>
