--- a/client/success.html
+++ b/client/success.html
@@ -5,5 +5,6 @@
 <body>
     <p>redirecting...</p>
 </body>
-    <script src="assets/javascript/app2.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="javascript/apiredirect.js"></script>
 </html>
