fixed a few files

--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,5 @@
 
   </body>
   <!-- Linkedin Sign in -->
-  <script type="text/javascript" src="javascript/linkedinAPI.js"></script>
+  <!-- <script type="text/javascript" src="javascript/linkedinAPI.js"></script> -->
 </html>
