have the window popping up. Need to fix route

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>DevPool</title>
 
-
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
 
   <!--[if lte IE 8]>
@@ -23,6 +22,9 @@
   <!--[if gt IE 8]><!-->
   <link rel="stylesheet" href="./src/assets/css/dev-pool.css">
   <!--<![endif]-->
+
+  <!-- Linkedin Sign in -->
+  <script type="text/javascript" src="src/assets/javascript/linkedinAPI.js"></script>
 </head>
 
 <body>
@@ -30,6 +32,4 @@
   <!-- built files will be auto injected -->
 
 </body>
-  <!-- Linkedin Sign in -->
-  <script type="text/javascript" src="javascript/linkedinAPI.js"></script>
 </html>
