--- a/client/success.html
+++ b/client/success.html
@@ -6,5 +6,5 @@
     <p>redirecting...</p>
 </body>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="javascript/apiredirect.js"></script>
+    <script type="text/javascript" src="src/assets/javascript/apiredirect.js"></script>
 </html>
